<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".tela_jogo">

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/manobra"
        android:textColor="#ffffff"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/btn_escolhermanobra2"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_neon"
        android:contentDescription="@string/manobra_no_corrimao"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_ramp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:tint="#ffffff" />

    <TextView
        android:id="@+id/text_chao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/manobra_no_chao"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/text_corrimao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/corrim_o"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />

    <ImageButton
        android:id="@+id/btn_escolhermanobra3"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_neon"
        android:contentDescription="@string/escolher_manobra_3_description"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_pista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:tint="#ffffff"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/text_pista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:text="@string/escolher_manobra_na_pista"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,UnknownId,VisualLintOverlap" />

    <ImageButton
        android:id="@+id/acertouButton"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_acertou"
        android:contentDescription="@string/acertou_button_description"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_ok"
        android:stateListAnimator="@animator/button_elevation"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:tint="#ffffff"
        tools:ignore="ExtraText,MissingConstraints" />

    <ImageButton
        android:id="@+id/errouButton"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="@drawable/button_errou"
        android:contentDescription="@string/errou_button_description"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_errou"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:tint="#ffffff"
        tools:ignore="ExtraText,MissingConstraints,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/resetarButton"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_reset"
        android:contentDescription="@string/reset_button_description"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_reset"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        app:tint="#ffffff"
        tools:ignore="ExtraText,MissingConstraints,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_escolhermanobra1"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:background="@drawable/button_neon"
        android:contentDescription="@string/escolher_manobra_1_description"
        android:elevation="50dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_skate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/ic_skate"
        app:tint="#ffffff"
        tools:ignore="ExtraText,MissingConstraints,DuplicateSpeakableTextCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_button"
        android:elevation="8dp"
        android:minWidth="133dp"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/saindo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textPontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pontua_o_0"
        android:textColor="#2962FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/text_acertou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/Acertou"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/text_erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/Errou"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/text_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/reset_level_description"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck,TextSizeCheck,VisualLintOverlap" />


</androidx.constraintlayout.widget.ConstraintLayout>